--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,23 @@
     <artifactId>dynamodb-local</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>DynamoDBLocal</artifactId>
+            <version>1.11.0.1</version>
+        </dependency>
+    </dependencies>
+
+    <!--Custom repository for the dependency-->
+    <repositories>
+        <repository>
+            <id>dynamodb-local-oregon</id>
+            <name>DynamoDB Local Release Repository</name>
+            <url>https://s3.ap-south-1.amazonaws.com/dynamodb-local-mumbai/release</url>
+        </repository>
+    </repositories>
+
 
 </project>
